--- a/views/ledgers/crypto_finance_cryptoexchange_show_2.ejs
+++ b/views/ledgers/crypto_finance_cryptoexchange_show_2.ejs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+style="text-align: center;
+background-image: url('https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw');
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: scroll;
+overflow-y: scroll; ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,61 +16,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
-<style>
-    .crypto_exchange_currency_header {
-        font-size: 30px;
-        border-radius: 30px;
-    text-align: center;
-    color:white;
-    -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+<div id="crypto_finance_cryptoexchange">
+<main id="crypto_finance_cryptoexchange_main">
+    <h2 class="title is-1 has-text-centered is-size-2 has-text-warning" style="
+    border-radius: 30px;
+-moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    }
-        html {
-            text-align: center;
-            background-image: url("https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw");
-            width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-        overflow-x: scroll;
-        overflow-y: scroll; 
-        }
-    
-        p {
-            font-size: 25px;
-            text-size-adjust: 15px;
-            color: black;
-        }
-
-        .crypto_exchange_header {
-            font-size: 30px;
-            border-radius: 30px;
-        text-align: center;
-        color:goldenrod;
-        -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-        }
-
-    </style>
-</style>
-<div class="crypto_finance_cryptoexchange">
-<main class="crypto_finance_cryptoexchange_main">
-    <h2 class="crypto_exchange_header"><b>Finseek Ledger System Cryptocurrency Exchange Coin/Token Information</b></h2>
+box-shadow: 1px 2px 3px rgba(0,0,0,.5);" id="crypto_exchange_header" id="crypto_exchange_header"><b>Finseek Ledger System Cryptocurrency Exchange Coin/Token Information</b></h2>
     <br />
     <br />
     <br />
-    <div class="block" style="border-radius: 40%; background-color: white" id="crypto_finance_cryptoexchange_index">
-        <p><b>Cryptocurrency Exchange URL Link</b>: <u><em><%= crypto_ex.crypto_currency_exchange_org_url_link %></em></u></p>
-        <p><b>Cryptocurrency Name</b>: <u><em><%= crypto_ex.crypto_currency_name %></em></u></p>
-        <p><b>Cryptocurrency Current Price</b>: <u><em><%= crypto_ex.crypto_currency_price %></em></u></p>
-        <p><b>Cryptocurrency Circulating Supply</b>: <u><em><%= crypto_ex.crypto_currency_circulating_supply %></em></u></p>
-        <p><b>Cryptocurrency Transaction Date</b>: <u><em><%= crypto_ex.crypto_currency_transactiondate %></em></u></p>
-        <p><b>Cryptocurrency Order Status</b>: <u><em><%= crypto_ex.crypto_currency_order_status %></em></u></p>
-        <p><b>Cryptocurrency Blockchain Receiving Transaction Hash ID</b>: <u><em><%= crypto_ex.blockchain_receiving_transaction_hash_id_num %></em></u></p>
-        <p><b>Cryptocurrency Blockchain Sending Transaction Hash ID</b>: <u><em><%= crypto_ex.blockchain_sending_transaction_hash_id_num %></em></u></p>
-        <p><b>Cryptocurrency Quantity</b>: <u><em><%= crypto_ex.crypto_currency_quantity %></em></u></p>    
+    <div id="block" style="border-radius: 40%; background-color:white" id="crypto_finance_cryptoexchange_index">
+        <p class="is-size-5 has-text-dark" style="text-size-adjust: 15px;"><b>Cryptocurrency Exchange URL Link</b>: <u><em><%= crypto_ex.crypto_currency_exchange_org_url_link %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Name</b>: <u><em><%= crypto_ex.crypto_currency_name %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Current Price</b>: <u><em><%= crypto_ex.crypto_currency_price %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Circulating Supply</b>: <u><em><%= crypto_ex.crypto_currency_circulating_supply %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Transaction Date</b>: <u><em><%= crypto_ex.crypto_currency_transactiondate %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Order Status</b>: <u><em><%= crypto_ex.crypto_currency_order_status %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Blockchain Receiving Transaction Hash ID</b>: <u><em><%= crypto_ex.blockchain_receiving_transaction_hash_id_num %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Blockchain Sending Transaction Hash ID</b>: <u><em><%= crypto_ex.blockchain_sending_transaction_hash_id_num %></em></u></p>
+        <p class="is-size-5 has-text-dark"><b>Cryptocurrency Quantity</b>: <u><em><%= crypto_ex.crypto_currency_quantity %></em></u></p>    
     </div>
 <br />
 <br />
@@ -81,20 +54,20 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 <br />
 <br />
 <a href="/crypto_finance/crypto_exchange_edit/<%=ID %>" align="right">
-    <button class="button is-warning" id="Edit">Edit Crypto Exchange Instance Data</button>
+    <button class="button is-warning is-uppercase is-underlined" id="Edit">Edit Crypto Exchange Instance Data</button>
 </a>
 <br />
 <br />
 <form action="/crypto_finance/crypto_exchange_show/<%=ID %>?_method=DELETE" method="POST" 
     align="center" name="cryptoexchange_post_form">
     <label>
-        <button class="button is-warning" id="Delete">Delete Crypto Exchange Instance Data</button>
+        <button class="button is-warning is-uppercase is-underlined" id="Delete">Delete Crypto Exchange Instance Data</button>
     </label>
 </form>
 <br />
 <form action="/crypto_finance/crypto_exchange_show" method="get" align="center" name="go_to_first_crypto_exchange_show_form">
     <label>
-        <button class="button is-warning" id="return_to_crypto_index" align="center"><a href="/crypto_finance/crypto_exchange_show">Return to previous Crypto Exchange Show Page</a></button>
+        <button class="button is-warning is-uppercase is-underlined" id="return_to_crypto_index" align="center"><a href="/crypto_finance/crypto_exchange_show">Return to previous Crypto Exchange Show Page</a></button>
     </label>
 </form></div>
 </main>
