--- a/views/edits/crypto_finance_ledger_info_edit.ejs
+++ b/views/edits/crypto_finance_ledger_info_edit.ejs
@@ -47,7 +47,11 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
         <div clas="fin_ledger_edit">
           <form action="/crypto_finance/financial_ledger_show/<%=id %>?_method=PUT" method="post">
             <fieldset>
-              <legend>Edit In New Information for the Currency Exchange</legend>
+              <legend class="title is-1 has-text-centered is-size-2 has-background-warning" style="
+              border-radius: 30px;
+          -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+          -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+          box-shadow: 1px 2px 3px rgba(0,0,0,.5);">Edit In New Information for the Currency Exchange</legend>
               <br />
                 <label class="list-item">
                 Financial User Ledger Info ID:<input
