--- a/views/ledgers/crypto_finance_cryptoexchange_show.ejs
+++ b/views/ledgers/crypto_finance_cryptoexchange_show.ejs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+style="text-align: center;
+background-image: url('https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw');
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: scroll;
+overflow-y: scroll;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,46 +16,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
-<style>
-    .FinSeek_Crypto_Finance_cryptoexchange_show_title_p {
-        font-size: 30px;
-        border-radius: 30px;
-    text-align: center;
-    color:goldenrod;
-    -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
--webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    }
-    
-        html {
-            text-align: center;
-            background-image: url("https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw");
-            width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-        overflow-x: scroll;
-        overflow-y: scroll;  
-        }
-    
-        p {
-            font-size: 25px;
-            text-size-adjust: 15px;
-            color: black;
-        }
-
-    </style>
 </style>
-<div class="crypto_finance_cryptoexchange">
-<main class="crypto_finance_cryptoexchange_main">
-    <h2><p class="FinSeek_Crypto_Finance_cryptoexchange_show_title_p"><b><em>FinSeek Crypto/Finance Crypto Exchange Tracking/Reporting System Ledger Information </em></b></p></h2> 
+<div id="crypto_finance_cryptoexchange">
+<main id="crypto_finance_cryptoexchange_main">
+    <h2><p id="FinSeek_Crypto_Finance_cryptoexchange_show_title_p"
+        class="title is-1 has-text-centered is-size-2 has-background-warning"
+        style="border-radius: 30px;
+        -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+    -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+    box-shadow: 1px 2px 3px rgba(0,0,0,.5);">
+    <b><em>FinSeek Crypto/Finance Crypto Exchange Tracking/Reporting System Ledger Information </em></b></p></h2> 
     <br />
     <% for(let index=0; index < crypto_ex.length; index++) { %>
-        <div class="tag button" style="width:100%; height:100%; border-radius: 40%;" id="Cryptocurrency_exchange_index">
-            <p class="list-item" id="FinSeek_Crypto_Finance_cryptoexchange_id"><b>Crypto Exchange ID</b>: <em><a href="/crypto_finance/crypto_exchange_show/<%=index%>"><%=crypto_ex[index].crypto_exchange_id %></a></em></p>    
+        <div class="tag button " style="width:100%; height:100%; border-radius: 40%;" id="Cryptocurrency_exchange_index">
+            <p class='is-size-2 $black-ter' style="
+            text-size-adjust: 15px;" class="list-item " id="FinSeek_Crypto_Finance_cryptoexchange_id"><b>Crypto Exchange ID</b>: <em><a href="/crypto_finance/crypto_exchange_show/<%=index%>"><%=crypto_ex[index].crypto_exchange_id %></a></em></p>    
         </div>
         <br />    
-            <iframe width="950" height="650" src="<%=crypto_ex[index].crypto_currency_exchange_org_url_link %>" 
+            <iframe class="has-ratio" 
+            width="950" height="650" src="<%=crypto_ex[index].crypto_currency_exchange_org_url_link %>" 
                 title="Crypto Currency Exchanges URL" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             ></iframe>
@@ -67,13 +54,17 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 <br />
 <form action="/crypto_finance/crypto_exchange_new" method="get" align="right" name="create_cryptoexchange_new_form">
     <label>
-        <button class="button is-warning is-primary" id="cryptoexchange_create_new_btn__" align="right"><a href="/crypto_finance/crypto_exchange_new">Add/Create Finseek Ledger System Crypto Exchange Instance(s)</a></button>
+        <button class="button is-primary is-warning is-uppercase is-underlined" id="cryptoexchange_create_new_btn__" align="right"><a href="/crypto_finance/crypto_exchange_new">Add/Create Finseek Ledger System Crypto Exchange Instance(s)</a></button>
     </label>
 </form>
 <br />
 <form action="/crypto_finance/ledger_index" method="get" align="right" name="go_to_crypto_finance_ledger_index_form">
     <label>
-        <button class="button is-warning" id="return_to_crypto_index" align="right"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
+        <button class="button is-warning is-uppercase is-underlined" id="return_to_crypto_index" 
+        align="right">
+        <a href="/crypto_finance/ledger_index">
+            Return to Finseek Crypto/Finance Ledger System Home Screen
+        </a></button>
     </label>
 </form>
 </main></div> 
