--- a/views/ledgers/crypto_finance_currencyexchange_show.ejs
+++ b/views/ledgers/crypto_finance_currencyexchange_show.ejs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+style="text-align: center;
+background-image: url('https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw');
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: scroll;
+overflow-y: scroll; ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +16,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
-<style>
-    .currency_exchange_info_show_title_p {
-        font-size: 30px;
-        border-radius: 30px;
-    text-align: center;
-    color:white;
-    -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
--webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    }
-    
-        html {
-            text-align: center;
-            background-image: url("https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw");
-            width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-        overflow-x: scroll;
-        overflow-y: scroll; 
-        }
-    
-        p {
-            font-size: 25px;
-            text-size-adjust: 15px;
-            color: black;
-        }
-
-    </style>
-</style>
-<div class="currency_exchange_info">
-<main class="currency_exchange_info_main">
-    <h2><p class="currency_exchange_info_show_title_p"><b><em>FinSeek Crypto/Finance Tracking/Reporting System Currency Exchange Information </em></b></p></h2>
+<div id="currency_exchange_info">
+<main id="currency_exchange_info_main">
+    <h2><p class="title is-1 has-text-centered is-size-2 has-background-warning"
+        style="border-radius: 30px;" id="currency_exchange_info_show_title_p"><b><em>FinSeek Crypto/Finance Tracking/Reporting System Currency Exchange Information </em></b></p></h2>
     <br />
     <br />
     <br />
     <% for(let index=0; index < currency_exchange.length; index++) { %>
         <div class="tag" style="width:100%; height:100%; border-radius: 40%;" id="currency_exchange_info_index">
-            <p class="list-item" id="currency_exchange_info_id"><b>Financial User(s) Currency Exchange Info ID</b>: <em><a href="/crypto_finance/currency_exchange_show/<%=index%>"><%=currency_exchange[index].finance_currency_exchange_info_id %></a></em></p>
+            <p class="is-size-2 has-text-black"  style="text-size-adjust: 15px;" class="list-item" id="currency_exchange_info_id"><b>Financial User(s) Currency Exchange Info ID</b>: <em><a href="/crypto_finance/currency_exchange_show/<%=index%>"><%=currency_exchange[index].finance_currency_exchange_info_id %></a></em></p>
         </div>
         <br />
         <br />
@@ -65,13 +44,13 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
    <br />
 <form action="/crypto_finance/currency_exchange_new" method="get" align="right" name="create_currency_exchange_new_form">
     <label>
-        <button class="button is-warning is-primary" id="currency_exchange_info_create_new_btn__" align="right"><a href="/crypto_finance/currency_exchange_new">Add/Create Finseek Ledger System Crypto Finance Currency Exchange Instance(s)</a></button>
+        <button class="button is-warning is-uppercase is-underlined is-primary" id="currency_exchange_info_create_new_btn__" align="right"><a href="/crypto_finance/currency_exchange_new">Add/Create Finseek Ledger System Crypto Finance Currency Exchange Instance(s)</a></button>
     </label>
 </form>
 <br />
 <form action="/crypto_finance/ledger_index" method="get" align="right" name="go_to_currency_exchange_index_form">
     <label>
-        <button class="button is-warning" id="return_to_currency_exchange_info_index" align="right"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
+        <button class="button is-warning is-uppercase is-underlined" id="return_to_currency_exchange_info_index" align="right"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
     </label>
 </form>
 </main></div>
