--- a/views/ledgers/crypto_finance_ledger_index.ejs
+++ b/views/ledgers/crypto_finance_ledger_index.ejs
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="text-align: center;
+background-image: url('https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw');
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: scroll;
+overflow-y: scroll; ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,60 +15,38 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
-<style>
-    html {
-        text-align: center;
-        background-image: url("https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw");
-        width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: scroll;
-    overflow-y: scroll; 
-    }
-
-    h1 {
-        border-radius: 30px;
-        text-align: center;
-        color:goldenrod;
-        font-size: 40px;
-    }
-
-    p {
-        font-size: 25px;
-        text-size-adjust: 15px;
-        color: #fff;
-    }
-
-</style>
 <div  id="FinSeek_Crypto_Finance_ledger_index">
     <main id="FinSeek_Crypto_Finance_ledger_main">
-    <h1><u><b>FinSeek Crypto/Finance Ledger System App Display Page</u></b></h1>
+    <h1 class="title is-1 has-text-centered is-size-3" style="border-radius: 30px; color:goldenrod;"><u><b>FinSeek Crypto/Finance Ledger System App Display Page</u></b></h1>
     <br />
     <br />
     <div class="tag" style="width:100%; height:100%; border-radius: 40%;" id="FinSeek_Crypto_Finance_crypto_exchange_index">
-        <h2 class="title is-1"><p id="FinSeek_Crypto_Finance_crypto_exchange"><a href = "/crypto_finance/crypto_exchange_show"><b><em>FinSeek Crypto/Finance Crypto Exchange Information <img src="https://imgs.search.brave.com/DYy1-8EE3b6MgWvdtAlTb6EPZlMRfeBGcpe6JAz9T4o/rs:fit:474:225:1/g:ce/aHR0cHM6Ly90c2Uz/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5j/eWQxdDlsWEtmTzl5/T2FSS0s4cl9BSGFI/YSZwaWQ9QXBp" style="width:10%; border-radius: 20%;"></em></b></a></p></h2> 
+        <h2 class="title is-2 is-uppercase is-size-4 $white-bis"><p id="FinSeek_Crypto_Finance_crypto_exchange" 
+            style=" text-size-adjust: 15px;"><a href = "/crypto_finance/crypto_exchange_show"><b><em>FinSeek Crypto/Finance Crypto Exchange Information <img src="https://imgs.search.brave.com/DYy1-8EE3b6MgWvdtAlTb6EPZlMRfeBGcpe6JAz9T4o/rs:fit:474:225:1/g:ce/aHR0cHM6Ly90c2Uz/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5j/eWQxdDlsWEtmTzl5/T2FSS0s4cl9BSGFI/YSZwaWQ9QXBp" style="width:10%; border-radius: 20%;"></em></b></a></p></h2> 
     </div>
     <br />
     <br />
     <br />
     <br />
     <div class="tag" style="width:100%; height:100%; border-radius: 40%;" id="FinSeek_Crypto_Finance_currency_exchange_index">
-        <h2><p id="FinSeek_Crypto_Finance_currency_exchange"><a href = "/crypto_finance/currency_exchange_show"><b><em>FinSeek Crypto/Finance Currency Exchange Information <img src="https://imgs.search.brave.com/oqZb2By54GuMGIpmbF7hvvjq57SKsfhn13DmMm9uU_c/rs:fit:1024:1024:1/g:ce/aHR0cHM6Ly9jZG4w/Lmljb25maW5kZXIu/Y29tL2RhdGEvaWNv/bnMvYmFua2luZy1h/bmQtZmluYW5jZS0y/LTMvNDgvNTgtMTAy/NC5wbmc" style="width:10%; border-radius: 20%; height:10%;"></em></b></a></p></h2> 
+        <h2 class="title is-2 is-uppercase is-size-4 $white-bis"><p id="FinSeek_Crypto_Finance_currency_exchange" 
+            style=" text-size-adjust: 15px;"><a href = "/crypto_finance/currency_exchange_show"><b><em>FinSeek Crypto/Finance Currency Exchange Information <img src="https://imgs.search.brave.com/oqZb2By54GuMGIpmbF7hvvjq57SKsfhn13DmMm9uU_c/rs:fit:1024:1024:1/g:ce/aHR0cHM6Ly9jZG4w/Lmljb25maW5kZXIu/Y29tL2RhdGEvaWNv/bnMvYmFua2luZy1h/bmQtZmluYW5jZS0y/LTMvNDgvNTgtMTAy/NC5wbmc" style="width:10%; border-radius: 20%; height:10%;"></em></b></a></p></h2> 
     </div>
     <br />
     <br />
     <br />
     <br />
     <div class="tag" style="width:100%; height:100%; border-radius: 40%;" id="FinSeek_Crypto_Finance_ledger_user_info_index">
-        <h2><p id="FinSeek_Crypto_Finance_ledger_user_info"><a href = "/crypto_finance/financial_ledger_show"><b><em>FinSeek Crypto/Finance User Ledger Information <img src="https://imgs.search.brave.com/Vs5GKF8UEClDueWPKSpqXeoBKMnw2NhrKH_xyLwBX0k/rs:fit:650:325:1/g:ce/aHR0cHM6Ly9sd2Zp/bGVzLm15Y291cnNl/LmFwcC9pbnR1aXRp/b25wdWJsaXNoaW5n/LXB1YmxpYy85OGUx/YjhkODEyZWY3MDFj/NmM1MDc1YjE2MmMx/NGZjNS5qcGVn" style="width:10%; border-radius: 20%;"></em></b></a></p></h2>
+        <h2 class="title is-2 is-uppercase is-size-4 $white-bis"><p id="FinSeek_Crypto_Finance_ledger_user_info" 
+            style=" text-size-adjust: 15px;"><a href = "/crypto_finance/financial_ledger_show"><b><em>FinSeek Crypto/Finance User Ledger Information <img src="https://imgs.search.brave.com/Vs5GKF8UEClDueWPKSpqXeoBKMnw2NhrKH_xyLwBX0k/rs:fit:650:325:1/g:ce/aHR0cHM6Ly9sd2Zp/bGVzLm15Y291cnNl/LmFwcC9pbnR1aXRp/b25wdWJsaXNoaW5n/LXB1YmxpYy85OGUx/YjhkODEyZWY3MDFj/NmM1MDc1YjE2MmMx/NGZjNS5qcGVn" style="width:10%; border-radius: 20%;"></em></b></a></p></h2>
     </div>
     <br />
     <br />
     <br />
     <br />
     <div class="tag" style="width:100%; height:100%; border-radius: 40%;" id="FinSeek_Crypto_Finance_total_index">
-        <h2><p id="FinSeek_Crypto_Finance_total_info"><a href = "/crypto_finance/financial_total_show_index"><b><em>FinSeek Crypto/Finance Totals and Insights <img src="https://imgs.search.brave.com/z4slE1pXly_k8_qdG0ls_O9Ma_2xcsid43LQB4qRKEY/rs:fit:474:268:1/g:ce/aHR0cHM6Ly9iZmlp/bnNpZ2h0LmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAyMC8w/Ny9URC0xLTQucG5n" style="width:10%; border-radius: 20%;"></em></b></a></p></h2> 
+        <h2 class="title is-2 is-uppercase is-size-4 $white-bis"><p id="FinSeek_Crypto_Finance_total_info" 
+            style=" text-size-adjust: 15px;"><a href = "/crypto_finance/financial_total_show_index"><b><em>FinSeek Crypto/Finance Totals and Insights</em></b></a></p></h2> 
     </div>
     <br />
     <br />
@@ -74,7 +59,7 @@
     <br />
     <form action="/user/logout" method="post" align="right" name="logout_form">
         <label>
-            <input class="button is-warning" name="logout_submit_btn" type="submit" id="logout_submit_btn__" value="Log out of Finseek System App"></label>
+            <input class="button is-warning is-uppercase is-underlined" name="logout_submit_btn" type="submit" id="logout_submit_btn__" value="Log out of Finseek System App"></label>
         </label>
     </form>
 </main>
