--- a/views/ledgers/crypto_finance_ledger_info_show.ejs
+++ b/views/ledgers/crypto_finance_ledger_info_show.ejs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+style="text-align: center;
+background-image: url('https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw');
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: scroll;
+overflow-y: scroll; ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +16,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
-<style>
-    .FinSeek_Crypto_Finance_ledger_info_show_title_p {
-        font-size: 30px;
-        border-radius: 30px;
-    text-align: center;
-    color:goldenrod;
+<div id="crypto_finance_ledger_info">
+<main id="crypto_finance_ledger_info_main">
+    <h2 class="title is-1 has-text-centered is-size-2 has-background-warning"
+    style="border-radius: 30px;
     -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    }
-    
-        html {
-            text-align: center;
-            background-image: url("https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw");
-            width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-        overflow-x: scroll;
-        overflow-y: scroll; 
-        }
-    
-        p {
-            font-size: 25px;
-            text-size-adjust: 15px;
-            color: black
-        }
-
-
-    </style>
-</style>
-<div class="crypto_finance_ledger_info">
-<main class="crypto_finance_ledger_info_main">
-    <h2><p class="FinSeek_Crypto_Finance_ledger_info_show_title_p"><b><em>FinSeek Crypto/Finance Tracking/Reporting System Ledger Information </em></b></p></h2> 
+box-shadow: 1px 2px 3px rgba(0,0,0,.5);"><p><b><em>FinSeek Crypto/Finance Tracking/Reporting System Ledger Information </em></b></p></h2> 
     <br />
     <br />
     <% for(let index=0; index < ledger_info.length; index++) { %>
         <div class="tag button" style="width:100%; height:100%; border-radius: 40%;" id="crypto_finance_ledger_info_index">
-            <p class="list-item" class="FinSeek_Crypto_Finance_ledger_info_id"><b>Financial User(s) Ledger Info ID</b>: <em><a href="/crypto_finance/financial_ledger_show/<%=index%>"><%=ledger_info[index].finance_user_id %></a></em></p>
+            <p class="list-item is-size-5 has-text-dark" style="text-size-adjust: 15px;" class="FinSeek_Crypto_Finance_ledger_info_id"><b>Financial User(s) Ledger Info ID</b>: <em><a href="/crypto_finance/financial_ledger_show/<%=index%>"><%=ledger_info[index].finance_user_id %></a></em></p>
         </div>
         <br />
         <br />
@@ -81,12 +62,12 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
    <br />
    <br />
    <br />
-<button class="button is-warning is-primary"><a href="/crypto_finance/finance_ledger_new">Add Crypto/Finance Ledger System Instance(s)</a></button>
+<button class="button is-warning is-uppercase is-underlined is-primary"><a href="/crypto_finance/finance_ledger_new">Add Crypto/Finance Ledger System Instance(s)</a></button>
 <br />
 <br />
 <form action="/crypto_finance/ledger_index" method="get" align="center" name="go_to_crypto_finance_ledger_index_form">
     <label>
-        <button class="button is-warning" id="return_to_crypto_finance_ledger_info_index" align="center"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
+        <button class="button is-warning is-uppercase is-underlined" id="return_to_crypto_finance_ledger_info_index" align="center"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
     </label>
 </form>
 </main>
