--- a/views/new/crypto_finance_currencyexchange_new.ejs
+++ b/views/new/crypto_finance_currencyexchange_new.ejs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+style="text-align: center;
+background-image: url('https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw');
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: scroll;
+overflow-y: scroll; ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,47 +16,17 @@
     <script src="https://code.jquery.com/jquery-3.6.1.js" 
 integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 </head>
-<style>
-        html {
-            text-align: center;
-            background-image: url("https://imgs.search.brave.com/Jhip99Bh6aIQWyy3RfLhXwsrYpV5TpIwdgt_gTa2G90/rs:fit:1200:952:1/g:ce/aHR0cHM6Ly9pLm1v/cmlvaC5jb20vMjAw/NzAyL2IzMTU0ZDMy/LmpwZw");
-            width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-        overflow-x: scroll;
-        overflow-y: scroll;  
-        }
-
-        form {
-            font-size: 25px;
-            text-size-adjust: 15px;
-            color: black;
-        }
-
-        h1 {
-            font-size: 25px;
-            text-size-adjust: 15px;
-            color: black;
-        }
-
-      button {
-        text-align: right;
-      }
-
-
-</style>
 <body>
     <div class="block" style="border-radius: 40%; background-color: white" id="currency_exchange_create_new">
-        <h1>Creating New Currency Exchange Instance</h1>
-    <form action="/crypto_finance/currency_exchange_show" method="post">
+        <h1 class="list-item is-size-2 has-text-black has-text-centered" style="text-size-adjust: 15px;">Creating New Currency Exchange Instance</h1>
+    <form class="list-item is-size-2 has-text-black has-text-centered" style="text-size-adjust: 15px;"  action="/crypto_finance/currency_exchange_show" method="post">
             Currency Exchange ID: <input class="button is-warning" name="finance_currency_exchange_info_id" 
             type="number" 
             placeholder="Enter a value for the Currency Exchange ID instance..."/>
         <br />
         <button class="button is-warning is-primary"><input type="submit" value="Add New Currency Exchange Instance" /></button>
         <br />
-        <button class="button is-warning" id="return_to_currency_index"><a href="/crypto_finance/currency_exchange_show">Return to Currency Exchange Home Screen</a></button>
+        <button class="button is-warning has-text-right" id="return_to_currency_index"><a href="/crypto_finance/currency_exchange_show">Return to Currency Exchange Home Screen</a></button>
     </form>
     </div>
     <br />
